2002-11-20  hhetter@suse.de

	* bonobo/bonobo-ui-component.c (ui_event),
	(impl_Bonobo_UIComponent_execVerb): 

2002-11-18  Michael Meeks  <michael@ximian.com>

	* tests/test-ui.c (cb_do_popup): don't destroy
	popup immediately after popup ;-)

2002-11-11  Michael Meeks  <michael@ximian.com>

	* bonobo/bonobo-ui-component.c
	(bonobo_ui_component_set_translate): don't
	segv later if we have a NULL / bogus xml
	string coming in.

2002-11-10  Ole Laursen  <olau@hardworking.dk>

	* configure.in: Added da to ALL_LINGUAS.

2002-11-09  Dmitry G. Mastrukov  <dmitry@taurussoft.org>

	* configure.in: Added Belarusian to ALL_LINGUAS

2002-11-06  Stanislav Brabec  <sbrabec@suse.cz>

	* samples/controls/Makefile.am,
	samples/compound-doc/bonobo-hello/Makefile.am:
	Fix $(prefix)/lib -> $(libdir).

2002-11-05  Balamurali Viswanathan  <balamurali.viswanathan@wipro.com>

	* bonobo/bonobo-ui-init-gtk.c: Change POPT_ARG_STRING to
	POPT_ARG_INT for the screen argument

2002-11-04  Mark McLoughlin  <mark@skynet.ie>

	* bonobo/bonobo-ui-util.c:
	(bonobo_ui_util_xml_get_icon_size): impl reading a named
	icon size from a node's "icon_size" attribute.
	(bonobo_ui_util_xml_set_image): use this icon size.

2002-11-04  Michael Meeks  <michael@ximian.com>

	* samples/controls/bonobo-sample-controls.c
	(bonobo_entry_control_new): do life instrumentation
	on the entry.

	* bonobo/bonobo-control.c:
	(bonobo_control_class_init): added disconnected signal.
	(bonobo_control_life_set_purge): impl.
	(bonobo_control_disconnected): impl.
	(control_frame_connection_died_cb): upd.
	(bonobo_control_unset_control_frame): kill timeout on frame.
	(bonobo_control_construct): setup timeout on construct'n.
	(control_life_idle_cb, control_life_disconnected): impl.
	(bonobo_control_life_instrument): impl.
	(bonobo_control_life_get_count): impl.

2002-11-01  Gustavo Carneiro <gjc@inescporto.pt>

	* bonobo/bonobo-ui-engine.c
	(add_debug_menu): impl.
	(bonobo_ui_engine_construct): do it if
	BONOBO_DEBUG is defined.
